<resources>
    <string name="app_name">Workshop_2-3</string>
    <string name="weight_unit_metric">KG</string>
    <string name="height_unit_metric">CM</string>
    <string name="weight_unit_imperial">lB</string>
    <string name="height_unit_imperial">Inch</string>
    <string name="age_old_question">Are you at least\n20 years old?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>
    <string name="pref_sys">Your Preferred\nSystem</string>
    <string name="next">Next</string>
    <string name="your_h">Your height</string>
    <string name="your_w">Your weight</string>
    <string name="your_bmi">Your BMI</string>
</resources>