<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MeasureActivity"
    android:id="@+id/myCoordinatorLayout"
    android:layout_height="match_parent"
    android:layout_width="match_parent" >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/textViewNotice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/yourWeight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/yourWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_w"
            app:layout_constraintTop_toBottomOf="@id/textViewNotice"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/seekBarWeight"
            android:textSize="20sp" />

        <SeekBar
            android:id="@+id/seekBarWeight"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/yourWeight"
            app:layout_constraintBottom_toTopOf="@id/editTextWeight"/>

        <EditText
            android:id="@+id/editTextWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            app:layout_constraintBottom_toTopOf="@id/yourHeight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/seekBarWeight" />

        <TextView
            android:id="@+id/weightUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/editTextWeight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/editTextWeight" />

        <TextView
            android:id="@+id/heightUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/editTextHeight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/editTextHeight" />

        <TextView
            android:id="@+id/yourHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_h"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/seekBarHeight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextWeight" />

        <SeekBar
            android:id="@+id/seekBarHeight"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/yourHeight"
            app:layout_constraintBottom_toTopOf="@id/editTextHeight"/>

        <EditText
            android:id="@+id/editTextHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            app:layout_constraintBottom_toTopOf="@id/buttonNext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/seekBarHeight" />

        <Button
            android:id="@+id/buttonNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextHeight" />


    </android.support.constraint.ConstraintLayout>

</android.support.design.widget.CoordinatorLayout>